Make more like slack thread example.

--- a/diamond-with-patches-transformers-2/bases/frontend/deploy.yaml
+++ b/diamond-with-patches-transformers-2/bases/frontend/deploy.yaml
@@ -1,10 +1,10 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: my-deployment
+  name: deploy
 spec:
   template:
     spec:
       containers:
-      - name: my-deployment
-        image: my-image
+      - name: frontend
+        image: frontend-image
